--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -131,5 +131,24 @@
       </svg>
     </button>
   </div>
+  <div class="footer-container">
+    <div class="footer-text">
+        <p>※ 루페르넷은 개인이 만든 비공식 페르소나5X 정보 제공 사이트로 게임의 콘텐츠와 소재의 트레이드마크와 저작권은 SEGA·ATLUS·Perfect World Games에 있습니다.</p>
+        <p>✉️ contact : superphil722@gmail.com　💬 discord : absolroot　@루트　<a href="https://forms.gle/Z5SgtSNpSvnprJxAA" style="color: rgb(255, 255, 255, 0.5); text-decoration: underline;" target="_blank">제보 및 요청</a></p>
+        <p></p>
+    </div>
+    
+    <!-- 반응형 일반 -->
+        <!--
+    <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-5862324369257695"
+            data-ad-slot="1387076195"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+    <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>-->
+</div>
 </body>
 </html>
