--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -133,9 +133,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 12px;
     margin-top: 30px;
 }
+
+.kofi-container {
+    display: flex;
+    justify-content: center;
+}
+
+.kofi-container iframe {
+    width: 226px !important;
+    height: 60px !important;
+}
+
+.kofi-button {
+    width: 202px !important;
+    height: 44px !important;
+    border-radius: 12px !important;
+    justify-content: center !important;
+}
+
+
 
 .bmc-container {
     margin-bottom: 0px;
@@ -143,7 +162,6 @@
 
 .kakao-pay-container {
     text-align: center;
-    margin-top: 15px;
 }
 
 .kakao-pay-button {
