persona en&jp complete

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,7 +135,7 @@
   <div class="footer-container">
     <div class="footer-text">
         <p id="footer-disclaimer">※ 루페르넷은 개인이 만든 비공식 페르소나5X 정보 제공 사이트로 게임의 콘텐츠와 소재의 트레이드마크와 저작권은 SEGA·ATLUS·Perfect World Games에 있습니다.</p>
-        <p><span id="footer-contact">✉️ contact : superphil722@gmail.com　💬 discord : absolroot　@루트　</span><a href="https://forms.gle/Z5SgtSNpSvnprJxAA" style="color: rgb(255, 255, 255, 0.5); text-decoration: underline;" target="_blank" id="footer-report-link">제보 및 요청</a></p>
+        <p><span id="footer-contact">✉️ contact : superphil722@gmail.com　💬 discord : absolroot　@루트　</span></p>
         <p></p>
     </div>
     
