--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-adsense-account" content="ca-pub-5862324369257695">
+<!--  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5862324369257695" crossorigin="anonymous"></script>  -->
   
 <!-- 모바일에서는 자동 광고 스크립트 로드 안함 -->
 <script>
