--- a/assets/css/default/nav.css
+++ b/assets/css/default/nav.css
@@ -559,3 +559,16 @@
         border-top: none;
     }
 }
+
+.discord-link {
+    color: inherit;
+    text-decoration: underline;
+}
+
+.discord-link:visited {
+    color: inherit;
+}
+
+.discord-link:hover {
+    color: inherit;
+}
