--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -174,6 +174,7 @@ body {
     font-size: 13px;
     color: rgba(255, 255, 255, 0.5);
     text-align: center;
+    padding: 0px 10px 0px 10px;
 }
 
 
