--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -46,10 +46,6 @@
         padding-top: 60px;
     }
 
-    .article-excerpt, .article-excerpt p {
-        padding: 0 0px;
-        margin: 0px !important;
-    }
 
     .category-title {
         margin-top: 0px !important;
@@ -123,15 +119,6 @@
     text-align: left;
 }
 
-.article-excerpt {
-    color: rgba(255, 255, 255, 0.8);
-    line-height: 1.6;
-    margin: 0px !important;
-}
-
-.article-excerpt p {
-    margin: 0px !important;
-}
 
 .article-body {
     color: rgba(255, 255, 255, 0.9);
@@ -261,7 +248,7 @@
   flex-wrap: wrap;
   margin-bottom: 2rem;
   padding-bottom: 1rem;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.1); */
 }
 
 .article-content {
