--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,24 +33,24 @@
   
 
   
-  <!-- 기본 메타태그 (JavaScript로 동적 업데이트됨) -->
-  <meta name="description" content="페르소나 5X 공략 및 정보 사이트">
-  <meta name="keywords" content="P5X, 페르소나5X, 공략, 괴도, 페르소나, 계시">
+  <!-- 기본 메타태그 (영어 기본값) -->
+  <meta name="description" content="Persona 5X Strategy and Information Site">
+  <meta name="keywords" content="P5X, Persona5X, Guide, Strategy, Phantom Thieves">
   <meta name="author" content="LufelNet">
   
-  <!-- Open Graph 메타태그 (JavaScript로 동적 업데이트됨) -->
-  <meta property="og:title" content="P5X 루페르넷">
-  <meta property="og:description" content="페르소나 5X 공략 및 정보 사이트">
+  <!-- Open Graph 메타태그 (영어 기본값) -->
+  <meta property="og:title" content="P5X Lufelnet - Persona 5X Guide">
+  <meta property="og:description" content="Persona 5X Strategy and Information Site">
   <meta property="og:type" content="website">
   <meta property="og:url" content="{{ site.url }}{{ current_url }}{{ canonical_params }}">
   <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/assets/img/home/seo.png">
-  <meta property="og:site_name" content="P5X 루페르넷">
-  <meta property="og:locale" content="ko_KR">
+  <meta property="og:site_name" content="P5X Lufelnet">
+  <meta property="og:locale" content="en_US">
   
-  <!-- Twitter 카드 메타태그 (JavaScript로 동적 업데이트됨) -->
+  <!-- Twitter 카드 메타태그 (영어 기본값) -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="P5X 루페르넷">
-  <meta name="twitter:description" content="페르소나 5X 공략 및 정보 사이트">
+  <meta name="twitter:title" content="P5X Lufelnet - Persona 5X Guide">
+  <meta name="twitter:description" content="Persona 5X Strategy and Information Site">
   <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/assets/img/home/seo.png">
   
   <!-- Firebase SDK -->
