--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -55,9 +55,9 @@ Article 페이지용 동적 메타 태그 설정
 <div class="main-wrapper">
     <div class="navigation-path">
         <a href="/" data-kr="홈" data-en="Home" data-jp="ホーム">홈</a>
-        <span class="separator">></span>
+        <span class="separator">/</span>
         <a href="/article/" data-kr="가이드" data-en="Guide" data-jp="ガイド">가이드</a>
-        <span class="separator">></span>
+        <span class="separator">/</span>
         <span class="current-page" data-kr="{{ page.translations.kr.title }}" data-en="{{ page.translations.en.title }}" data-jp="{{ page.translations.jp.title }}">{{ page.title }}</span>
     </div>
 
