--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -46,8 +46,8 @@
     .main-content {
         margin: 0 0px;
         padding-top: 10px;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
         padding-bottom: 10px;
     }
 
@@ -362,6 +362,6 @@
   }
 
   .article-content h3 {
-    font-size: 1.1rem;
+    font-size: 1.1rem !important;
   }
 } 
