--- a/assets/css/position-tiers.css
+++ b/assets/css/position-tiers.css
@@ -52,9 +52,9 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.875rem;
+  font-size: 0.6rem;
   font-weight: 600;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.15);
   text-align: center;
 }
 
