--- a/assets/css/cha_detail.css
+++ b/assets/css/cha_detail.css
@@ -1258,6 +1258,8 @@ h2{
     width: 80px;
     margin: 0 0;
     position: relative;
+    
+    text-decoration: none !important;
 }
 
 .party-member.spoiler {
