--- a/assets/css/revelations.css
+++ b/assets/css/revelations.css
@@ -8,7 +8,7 @@
 .revelation-cards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 40px 24px; 
+    gap: 20px 20px; 
     justify-content: left;
     padding: 20px;
 }
@@ -31,8 +31,7 @@
 
 .img-container {
     position: relative;
-    flex: 0 0 120px;
-    width: 120px;
+    flex: 0 0 90px;
 }
 
 .revelation-img {
@@ -41,12 +40,39 @@
     border-radius: 8px;
 }
 
+@media (max-width: 768px) {
+    .revelation-img{
+        width: 60px;
+    }
+
+    
+    .img-container {
+        position: relative;
+        flex: 0 0 60px;
+    }
+
+    .card {
+        gap:16px;
+    }
+
+    .set-label {
+        font-size: 11px !important;
+    }
+
+    .effect-set {
+        grid-template-columns: 48px 1fr !important;
+        padding: 10px !important;
+        border-radius: 4px !important;
+    }
+
+}
+
 .name-img {
     position: absolute;
-    bottom: 5%;
-    left: 52%;
+    bottom: 7%;
+    left: 49%;
     transform: translateX(-48%);
-    width: 50%;
+    width: 40%;
     z-index: 2;
 }
 
@@ -117,7 +143,8 @@
 .set-label {
     color: rgb(255, 255, 255, 0.9);
     font-weight: 500;
-    font-size: 13px;
+    font-size: 12px;
+    margin-right: 2px;
 }
 
 .set-desc {
@@ -304,8 +331,7 @@
     }
 
     .card {
-        flex-direction: column;
-        align-items: center;
+        flex-direction: row;
         padding-left: 10px;
         padding-right: 10px;
     }
